# python

./: .env.gmail  .env.ms  .env.prv  .gitignore  CHANGELOG.md  COMPARE.md  Gemfile  README.client.md  README.developer.md  README.md  REMOTE.md  TODO.txt  _config.yml  coboarding.sh  dev.sh  docker-compose.browser-service.yml  docker-compose.llm-orchestrator.yml  docker-compose.min.yml  docker-compose.minimal.yml  docker-compose.novnc.yml  docker-compose.video-chat.yml  docker-compose.web-interface.yml  docker-compose.web-terminal.yml  docker-compose.yml  find_files_by_size.py  fix-permissions.sh  index2.html  init.sh  install.ps1  install.sh  monitor.sh  pyproject.toml  requirements.txt  run-tests.sh  run.ps1  run.sh  runmin.sh  setup-all.sh  setup.py  src.md  (+7 more)
containers/: test-service.sh
containers/browser-service/: Dockerfile  requirements.txt  supervisord.conf  test.sh
containers/desktop-app/: main.js  package.json  preload.js  startup.html
containers/llm-orchestrator-min/: .dockerignore  Dockerfile  Dockerfile.model_downloader  README.md  api.py  detect-hardware.py  docker-compose.yml  download_model.py  download_model_docker.sh  (+13 more)
docs/: architecture.md  chrome-gpg-fix.md  contact.md  containers.md  e2e-tests.md  examples.md  faq.md  index.md  install.md  quickstart.md
monitor/: app.py
scripts/: browser.sh  colors.sh  install_package.sh  install_requirements.sh  start_monitor.sh  test_all.sh  test_browser_service.sh  test_infra.sh  test_llm_orchestrator.sh  test_novnc.sh  tts.sh
test-examples/: run_examples.py
update/: version.sh
volumes/: commands.py
(+109 files in other folders)
