[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "coboarding"
version = "0.1.3"
description = "Automated Development Environment"
authors = [{ name = "Tom Sapletta" }]
requires-python = ">=3.8"
readme = "README.md"
license = "Apache-2.0"

[project.urls]
Documentation = "https://github.com/coboarding/python/blob/main/README.md"
Changelog = "https://github.com/coboarding/python/blob/main/CHANGELOG.md"
MonitoringSystemDocs = "https://github.com/coboarding/python/blob/main/docs/monitoring-system.md"
Repository = "https://github.com/coboarding/python.git"